:sparkles: feat: create scrapNews activity function and will be change other branch